--- a/ListadeCompras/app/src/main/res/values/strings.xml
+++ b/ListadeCompras/app/src/main/res/values/strings.xml
@@ -1,14 +1,25 @@
 <resources>
+    <!-- Strings de telas -->
+    <!-- Tela principal -->
     <string name="app_name">Lista de Compras</string>
-    <string name="text_view_lista">Listas</string>
-    <string name="text_view_compras">Comprar</string>
-    <string name="title_activity_lista_de_compras">Listas de Compras</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="text_view_lista">Fazer Lista</string>
+    <string name="text_view_compras">Fazer Compras</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <!-- Tela de listas -->
+    <string name="title_activity_lista">Lista de Compras</string>
+    <string name="adionar_item">Adicionar ítem</string>
+
+    <!-- Tela de compras -->
+    <string name="title_activity_compras">Compras</string>
+    <string name="soma_das_compras">Total das compras: </string>
+
+    <!-- Tela de adicionar itens -->
+    <string name="nome_item">Nome do ítem</string>
+    <string name="categoria_item">Selecione a categoria do ítem: </string>
+    <string name="cat_condimentos">Condimento</string>
+    <string name="cat_bolacha">Bolachas e pães</string>
+    <string name="cat_frios">Frios e carnes</string>
+    <string name="cat_higiene">Higiene e limpeza</string>
+    <string name="quant_item">Quantidade: </string>
+    <string name="preco_item">Preço: </string>
 </resources>
