Primeira versão beta do app pronta

--- a/ListadeCompras/app/src/main/res/values/strings.xml
+++ b/ListadeCompras/app/src/main/res/values/strings.xml
@@ -11,7 +11,9 @@
 
     <!-- Tela de compras -->
     <string name="title_activity_compras">Compras</string>
-    <string name="soma_das_compras">Total das compras:</string>
+    <string name="soma_das_compras">Total das compras:" "</string>
+    <string name="finalizar_compras">Finalizar</string>
+    <string name="valor_avulso">Valor avulso:" "</string>
 
     <!-- Tela de adicionar itens -->
     <string name="nome_item">Nome do item</string>
@@ -29,5 +31,5 @@
     <string name="text_quant">Qt.</string>
 
     <!-- Gerais -->
-    <string name="text_rs">" "R$" "</string>
+    <string name="text_rs">R$" "</string>
 </resources>
